apply customer manage form

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="assets/style/style.css">
-    <link rel="stylesheet" href="assets/style/normalize.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/bootstrap-5.3.1-dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,8 +38,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div id="navbar-nav" class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link active" aria-current="page" href="#">Customer</a>
+                    <a class="nav-link active" aria-current="page" href="#home_page">Home</a>
+                    <a class="nav-link active" aria-current="page" href="customerManage.html">Customer</a>
                     <a class="nav-link active" aria-current="page" href="#">Item</a>
                     <a class="nav-link active" aria-current="page" href="#">Order</a>
                     <a class="nav-link active" aria-current="page" href="#">
@@ -52,7 +52,7 @@
 </section>
 
 <!--Add Home Page Section-->
-<main class="home_page">
+<main id="home_page" class="home_page">
     <section class="home_page_paragraph">
         <div>
             <div>
