init the project

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
         </div>
     </div>
-
+<!--<section></section>-->
     <div id="itemCard">
         <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
