--- a/index.html
+++ b/index.html
@@ -282,7 +282,9 @@
                     </div>
                     <div  class="mb-3">
                         <label for="customerId1" class="form-label">Customer id :</label>
-                        <input type="text" class="form-control" id="customerId1">
+                        <select id="customerId1" class="form-select" aria-label="Default select example">
+                            <option selected>Open this select menu</option>
+                        </select>
                     </div>
 
                     <div class="mb-3">
@@ -579,7 +581,7 @@
     });
 
     document.addEventListener("DOMContentLoaded", function () {
-        var ctx = document.getElementById('barChart').getContext('2d')
+        var ctx = document.getElementById('barChart').getContext('2d');
         var data = {
             labels: ['Label 1', 'Label 2', 'Label 3', 'Label 4'],
             datasets: [{
